Make ConvertRaster::getOffset() compatible with Java > 17.0, too